--- a/api/src/database/system-data/fields/webhooks.yaml
+++ b/api/src/database/system-data/fields/webhooks.yaml
@@ -42,7 +42,7 @@ fields:
       choices:
         - text: $t:field_options.directus_webhooks.status_options_active
           value: active
-          foreground: 'var(--primary-10)'
+          foreground: 'var(--primary-alt)'
           background: 'var(--theme--primary)'
         - text: $t:field_options.directus_webhooks.status_options_inactive
           value: inactive
