--- a/api/src/database/system-data/fields/webhooks.yaml
+++ b/api/src/database/system-data/fields/webhooks.yaml
@@ -17,7 +17,7 @@ fields:
       choices:
         - value: POST
           foreground: 'var(--theme--primary)'
-          background: 'var(--primary-25)'
+          background: 'var(--theme--primary-subdued)'
         - value: GET
           foreground: 'var(--theme--secondary)'
           background: 'var(--secondary-25)'
@@ -42,7 +42,7 @@ fields:
       choices:
         - text: $t:field_options.directus_webhooks.status_options_active
           value: active
-          foreground: 'var(--primary-alt)'
+          foreground: 'var(--theme--primary-background)'
           background: 'var(--theme--primary)'
         - text: $t:field_options.directus_webhooks.status_options_inactive
           value: inactive
@@ -116,7 +116,7 @@ fields:
         - text: $t:create
           value: create
           foreground: 'var(--theme--primary)'
-          background: 'var(--primary-25)'
+          background: 'var(--theme--primary-subdued)'
         - text: $t:update
           value: update
           foreground: 'var(--blue)'
