--- a/api/src/database/seeds/03-users.yaml
+++ b/api/src/database/seeds/03-users.yaml
@@ -35,16 +35,10 @@ columns:
     type: string
     length: 8
     default: 'en-US'
-  appearance:
+  theme:
     type: string
     length: 20
     default: auto
-  theme_dark:
-    type: string
-    default: default
-  theme_light:
-    type: string
-    default: default
   tfa_secret:
     type: string
     length: 255
