Fix extension enable flag type on SQLite

--- a/api/src/database/system-data/collections/collections.yaml
+++ b/api/src/database/system-data/collections/collections.yaml
@@ -95,3 +95,5 @@ data:
 
   - collection: directus_translations
     note: $t:directus_collection.directus_translations
+
+  - collection: directus_extensions
