--- a/api/src/database/system-data/relations/relations.yaml
+++ b/api/src/database/system-data/relations/relations.yaml
@@ -37,6 +37,10 @@ data:
     many_field: parent
     one_collection: directus_revisions
 
+  - many_collection: directus_revisions
+    many_field: version
+    one_collection: directus_versions
+
   ### Presets
   - many_collection: directus_presets
     many_field: user
@@ -173,4 +177,17 @@ data:
 
   - many_collection: directus_shares
     many_field: user_created
+    one_collection: directus_users
+
+  ### Versions
+  - many_collection: directus_versions
+    many_field: collection
+    one_collection: directus_collections
+
+  - many_collection: directus_versions
+    many_field: user_created
+    one_collection: directus_users
+
+  - many_collection: directus_versions
+    many_field: user_updated
     one_collection: directus_users
