--- a/api/src/database/system-data/collections/collections.yaml
+++ b/api/src/database/system-data/collections/collections.yaml
@@ -96,4 +96,8 @@ data:
   - collection: directus_translations
     note: $t:directus_collection.directus_translations
 
+  - collection: directus_versions
+    note: $t:directus_collection.directus_versions
+
   - collection: directus_extensions
+    note: $t:directus_collection.directus_extensions
