Cast to json on user settings as well

--- a/api/src/database/system-data/fields/users.yaml
+++ b/api/src/database/system-data/fields/users.yaml
@@ -129,10 +129,14 @@ fields:
   - field: theme_light_overrides
     width: full
     interface: system-theme-overrides
+    special:
+      - cast-json
 
   - field: theme_dark_overrides
     width: full
     interface: system-theme-overrides
+    special:
+      - cast-json
 
   - field: admin_divider
     interface: presentation-divider
