--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -26,13 +26,12 @@
 		"test": "vitest --watch=false"
 	},
 	"dependencies": {
-		"ms": "2.1.3",
-		"@directus/storage": "workspace:*"
+		"@directus/storage": "workspace:*",
+		"ms": "2.1.3"
 	},
 	"devDependencies": {
 		"@directus/random": "workspace:*",
 		"@directus/tsconfig": "workspace:*",
-		"@directus/types": "workspace:*",
 		"@types/ms": "0.7.31",
 		"@types/node": "18.16.12",
 		"@vitest/coverage-c8": "0.31.1",
