--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -38,8 +38,7 @@
 		"joi": "17.9.2",
 		"lodash-es": "4.17.21",
 		"micromustache": "8.0.3",
-		"tmp": "0.2.1",
-		"vue": "3.3.4"
+		"tmp": "0.2.1"
 	},
 	"devDependencies": {
 		"@directus/tsconfig": "workspace:*",
@@ -53,5 +52,13 @@
 		"tsup": "7.2.0",
 		"typescript": "5.2.2",
 		"vitest": "0.31.1"
+	},
+	"peerDependencies": {
+		"vue": "3.3.4"
+	},
+	"peerDependenciesMeta": {
+		"vue": {
+			"optional": true
+		}
 	}
 }
