JSON-cast onboarding fields

--- a/api/src/database/system-data/fields/settings.yaml
+++ b/api/src/database/system-data/fields/settings.yaml
@@ -412,5 +412,7 @@ fields:
               placeholder: $t:value
 
   - field: onboarding
+    special:
+      - cast-json
     readonly: true
     hidden: true
