--- a/.github/workflows/blackbox-pr.yml
+++ b/.github/workflows/blackbox-pr.yml
@@ -21,9 +21,27 @@ env:
   NODE_OPTIONS: --max_old_space_size=6144
 
 jobs:
-  test:
-    name: SQLite Only
+  build:
     runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Prepare
+      uses: ./.github/actions/prepare
+
+    - name: Install
+      uses: ./.github/actions/install
+
+    - name: Build
+      uses: ./.github/actions/build
+
+  test:
+    name: SQLite Only ${{ matrix.shard }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        shard: [1/3, 2/3, 3/3]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -31,9 +49,16 @@ jobs:
       - name: Prepare
         uses: ./.github/actions/prepare
 
+      - name: Install
+        uses: ./.github/actions/install
+
+      - name: Build
+        uses: ./.github/actions/build
+      
+
       - name: Start services
         run:
           docker compose -f tests/blackbox/docker-compose.yml up auth-saml redis minio minio-mc -d --quiet-pull --wait
 
       - name: Run tests
-        run: TEST_DB=sqlite3 pnpm run test:blackbox
+        run: TEST_DB=sqlite3 pnpm run test:blackbox --shard ${{ matrix.shard }}
