added -- before --shard

--- a/.github/workflows/blackbox-pr.yml
+++ b/.github/workflows/blackbox-pr.yml
@@ -62,4 +62,4 @@ jobs:
           docker compose -f tests/blackbox/docker-compose.yml up auth-saml redis minio minio-mc -d --quiet-pull --wait
 
       - name: Run tests
-        run: TEST_DB=sqlite3 pnpm run test:blackbox --shard=${{ matrix.shard }}
+        run: TEST_DB=sqlite3 pnpm run test:blackbox -- --shard=${{ matrix.shard }}
