Install glob-to-regexp

--- a/api/package.json
+++ b/api/package.json
@@ -112,6 +112,7 @@
 		"express": "4.18.2",
 		"flat": "5.0.2",
 		"fs-extra": "11.1.1",
+		"glob-to-regexp": "0.4.1",
 		"graphql": "16.6.0",
 		"graphql-compose": "9.0.10",
 		"graphql-ws": "5.12.0",
@@ -186,6 +187,7 @@
 		"@types/express-serve-static-core": "4.17.35",
 		"@types/flat": "5.0.2",
 		"@types/fs-extra": "11.0.1",
+		"@types/glob-to-regexp": "0.4.3",
 		"@types/inquirer": "9.0.3",
 		"@types/js-yaml": "4.0.5",
 		"@types/json2csv": "5.0.3",
