Use the correct package imports

--- a/packages/create-directus-extension/package.json
+++ b/packages/create-directus-extension/package.json
@@ -33,7 +33,7 @@
 		"lib/index.js"
 	],
 	"dependencies": {
-		"@directus/constants": "workspace:*",
+		"@directus/extensions": "workspace:*",
 		"@directus/extensions-sdk": "workspace:*",
 		"inquirer": "9.2.4"
 	}
