--- a/packages/specs/src/paths/versions/save.yaml
+++ b/packages/specs/src/paths/versions/save.yaml
@@ -2,6 +2,8 @@ post:
   summary: Save to a Content Version
   description: Save item changes to an existing Content Version.
   operationId: saveContentVersion
+  parameters:
+    - $ref: '../../openapi.yaml#/components/parameters/UUId'
   requestBody:
     content:
       application/json:
@@ -14,9 +16,7 @@ post:
         application/json:
           schema:
             type: object
-            properties:
-              data:
-                $ref: '../../openapi.yaml#/components/schemas/Items'
+            properties: {}
     '401':
       $ref: '../../openapi.yaml#/components/responses/UnauthorizedError'
     '404':
