--- a/packages/specs/src/paths/versions/version.yaml
+++ b/packages/specs/src/paths/versions/version.yaml
@@ -1,13 +1,10 @@
 get:
-  summary: Retrieve an Item
-  description: Retrieve a single item by unique identifier.
-  tags:
-    - Items
-  operationId: getItem
+  summary: Retrieve a Content Version
+  description: Retrieve a single Content Version by unique identifier.
+  operationId: getContentVersion
   parameters:
     - $ref: '../../openapi.yaml#/components/parameters/Fields'
     - $ref: '../../openapi.yaml#/components/parameters/Meta'
-    - $ref: '../../openapi.yaml#/components/parameters/Version'
   responses:
     '200':
       description: Successful request
@@ -17,18 +14,18 @@ get:
             type: object
             properties:
               data:
-                type: object
+                $ref: '../../openapi.yaml#/components/schemas/Versions'
     '401':
       $ref: '../../openapi.yaml#/components/responses/UnauthorizedError'
     '404':
       $ref: '../../openapi.yaml#/components/responses/NotFoundError'
+  tags:
+    - Versions
 
 patch:
-  summary: Update an Item
-  description: Update an existing item.
-  tags:
-    - Items
-  operationId: updateItem
+  summary: Update a Content Version
+  description: Update an existing Content Version.
+  operationId: updateContentVersion
   parameters:
     - $ref: '../../openapi.yaml#/components/parameters/Fields'
     - $ref: '../../openapi.yaml#/components/parameters/Meta'
@@ -36,7 +33,8 @@ patch:
     content:
       application/json:
         schema:
-          type: object
+          anyOf:
+            - $ref: '../../openapi.yaml#/components/schemas/Versions'
   responses:
     '200':
       description: Successful request
@@ -46,18 +44,18 @@ patch:
             type: object
             properties:
               data:
-                type: object
+                $ref: '../../openapi.yaml#/components/schemas/Versions'
     '401':
       $ref: '../../openapi.yaml#/components/responses/UnauthorizedError'
     '404':
       $ref: '../../openapi.yaml#/components/responses/NotFoundError'
+  tags:
+    - Versions
 
 delete:
-  summary: Delete an Item
-  description: Delete an existing item.
-  tags:
-    - Items
-  operationId: deleteItem
+  summary: Delete a Content Version
+  description: Delete an existing Content Version.
+  operationId: deleteContentVersion
   responses:
     '200':
       description: Successful request
@@ -65,17 +63,8 @@ delete:
       $ref: '../../openapi.yaml#/components/responses/UnauthorizedError'
     '404':
       $ref: '../../openapi.yaml#/components/responses/NotFoundError'
+  tags:
+    - Versions
+
 parameters:
-  - $ref: '../../openapi.yaml#/components/parameters/Collection'
-  - name: id
-    description: Index of the item.
-    in: path
-    required: true
-    schema:
-      oneOf:
-        - type: integer
-          description: Incremental index of the item.
-          example: 1
-        - type: string
-          description: Unique identifier of the item.
-          example: 8cbb43fe-4cdf-4991-8352-c461779cec02
+  - $ref: '../../openapi.yaml#/components/parameters/UUId'
