--- a/packages/create-directus-project/package.json
+++ b/packages/create-directus-project/package.json
@@ -4,6 +4,7 @@
 	"description": "A small installer util that will create a directory, add boilerplate folders, and install Directus through npm.",
 	"main": "lib/index.js",
 	"repository": "directus/create-directus-project",
+	"type": "module",
 	"exports": {
 		".": "./lib/index.js",
 		"./package.json": "./package.json"
@@ -19,12 +20,12 @@
 	"author": "Rijk van Zanten <rijkvanzanten@me.com>",
 	"license": "MIT",
 	"dependencies": {
-		"chalk": "^4.1.1",
-		"commander": "^8.0.0",
-		"execa": "^5.1.1",
-		"fs-extra": "^10.0.0",
-		"log-symbols": "4.1.0",
-		"ora": "^5.4.0",
-		"update-check": "^1.5.4"
+		"chalk": "5.3.0",
+		"commander": "11.1.0",
+		"execa": "8.0.1",
+		"fs-extra": "11.1.1",
+		"log-symbols": "6.0.0",
+		"ora": "7.0.1",
+		"update-check": "1.5.4"
 	}
 }
