Add explicit "Match global" option

--- a/api/src/database/system-data/fields/users.yaml
+++ b/api/src/database/system-data/fields/users.yaml
@@ -104,6 +104,8 @@ fields:
     interface: select-dropdown
     options:
       choices:
+        - value: null
+          text: $t:appearance_global
         - value: auto
           text: $t:appearance_auto
         - value: light
