--- a/packages/create-directus-project/package.json
+++ b/packages/create-directus-project/package.json
@@ -3,7 +3,11 @@
 	"version": "10.0.0",
 	"description": "A small installer util that will create a directory, add boilerplate folders, and install Directus through npm.",
 	"main": "lib/index.js",
-	"repository": "directus/create-directus-project",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/directus/directus.git",
+		"directory": "packages/create-directus-project"
+	},
 	"type": "module",
 	"exports": {
 		".": "./lib/index.js",
