--- a/api/src/database/system-data/fields/users.yaml
+++ b/api/src/database/system-data/fields/users.yaml
@@ -100,6 +100,13 @@ fields:
       - no-data
     width: full
 
+  # This is a temporary field to help people migrate from
+  # 10.6.4 to 10.7.0 and should be removed in 10.7.3
+  # @TODO remove
+  - field: theme
+    options:
+      hidden: true
+
   - field: appearance
     interface: select-dropdown
     options:
