Mark it as alias to not load from db

--- a/api/src/database/system-data/fields/users.yaml
+++ b/api/src/database/system-data/fields/users.yaml
@@ -106,6 +106,9 @@ fields:
   - field: theme
     options:
       hidden: true
+    special:
+      - alias
+      - no-data
 
   - field: appearance
     interface: select-dropdown
