Add field to permissions

--- a/api/src/database/system-data/app-access-permissions/app-access-permissions.yaml
+++ b/api/src/database/system-data/app-access-permissions/app-access-permissions.yaml
@@ -107,3 +107,8 @@
     - tfa_secret
     - status
     - role
+
+    # This is a temporary field to help people migrate from
+    # 10.6.4 to 10.7.0 and should be removed in 10.7.3
+    # @TODO remove
+    - theme
