Fix unit test runner

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -65,7 +65,7 @@ jobs:
         uses: ./.github/actions/prepare
 
       - name: Run Tests
-        run: pnpm test -- --changed ${{ github.base_ref }} --passWithNoTests
+        run: pnpm test -- -- --changed ${{ github.base_ref }} --passWithNoTests
 
   analyze:
     name: CodeQL Analysis
