Trial and error is my favorite

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -59,12 +59,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.base_ref }}
-
-      - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Prepare
         uses: ./.github/actions/prepare
