Is this still needed?

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -60,8 +60,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+        # with:
+        #   fetch-depth: 0
 
       - name: Prepare
         uses: ./.github/actions/prepare
