Does this work?

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -60,6 +60,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.base_ref }}
+
+      - name: Checkout repository
+        uses: actions/checkout@v3
         # with:
         #   fetch-depth: 0
 
