--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -61,12 +61,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.base_ref }}
-
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        # with:
-        #   fetch-depth: 0
+          fetch-depth: 0
 
       - name: Prepare
         uses: ./.github/actions/prepare
