--- a/packages/specs/src/paths/extensions/update.yaml
+++ b/packages/specs/src/paths/extensions/update.yaml
@@ -13,6 +13,17 @@ patch:
       application/json:
         schema:
           type: object
+          properties:
+            meta:
+              type: object
+              description:
+                Directus metadata for the extension. Where the configuration for the extension in the current project is
+                stored.
+              properties:
+                enabled:
+                  description: Whether or not the extension is enabled.
+                  example: true
+                  type: boolean
   responses:
     '200':
       content:
@@ -21,9 +32,7 @@ patch:
             type: object
             properties:
               data:
-                type: array
-                items:
-                  type: object
+                $ref: '../../openapi.yaml#/components/schemas/Extensions'
       description: Successful request
     '401':
       $ref: '../../openapi.yaml#/components/responses/UnauthorizedError'
