--- a/tests/blackbox/docker-compose.yml
+++ b/tests/blackbox/docker-compose.yml
@@ -112,7 +112,7 @@ services:
       - 'host.docker.internal:host-gateway'
 
   minio:
-    image: minio/minio:RELEASE.2023-10-25T06-33-25Z
+    image: minio/minio
     command: server /data/minio/ --console-address :9001
     ports:
       - 8881:9000
