--- a/api/src/database/system-data/fields/settings.yaml
+++ b/api/src/database/system-data/fields/settings.yaml
@@ -86,18 +86,6 @@ fields:
     width: half
     group: theming_group
 
-  - field: default_appearance
-    interface: select-dropdown
-    options:
-      choices:
-        - value: auto
-          text: $t:appearance_auto
-        - value: light
-          text: $t:appearance_light
-        - value: dark
-          text: $t:appearance_dark
-    group: theming_group
-
   - field: theming_divider
     interface: presentation-divider
     options:
@@ -107,6 +95,19 @@ fields:
       - alias
       - no-data
     width: full
+    group: theming_group
+
+  - field: default_appearance
+    interface: select-dropdown
+    width: half
+    options:
+      choices:
+        - value: auto
+          text: $t:appearance_auto
+        - value: light
+          text: $t:appearance_light
+        - value: dark
+          text: $t:appearance_dark
     group: theming_group
 
   - field: default_theme_light
