--- a/api/src/database/system-data/fields/users.yaml
+++ b/api/src/database/system-data/fields/users.yaml
@@ -105,7 +105,7 @@ fields:
     options:
       choices:
         - value: null
-          text: $t:appearance_global
+          text: $t:default_sync_with_project
         - value: auto
           text: $t:appearance_auto
         - value: light
@@ -119,6 +119,7 @@ fields:
     interface: system-theme
     options:
       appearance: light
+      includeNull: true
 
   - field: theme_light_overrides
     width: full
@@ -131,6 +132,7 @@ fields:
     interface: system-theme
     options:
       appearance: dark
+      includeNull: true
 
   - field: theme_dark_overrides
     width: full
