--- a/packages/extensions-sdk/package.json
+++ b/packages/extensions-sdk/package.json
@@ -34,6 +34,7 @@
 		"@directus/composables": "workspace:*",
 		"@directus/constants": "workspace:*",
 		"@directus/extensions": "workspace:*",
+		"@directus/themes": "workspace:*",
 		"@directus/types": "workspace:*",
 		"@directus/utils": "workspace:*",
 		"@rollup/plugin-commonjs": "25.0.0",
