--- a/packages/storage-driver-local/package.json
+++ b/packages/storage-driver-local/package.json
@@ -26,8 +26,7 @@
 		"test": "vitest --watch=false"
 	},
 	"dependencies": {
-		"@directus/storage": "workspace:*",
-		"@directus/utils": "workspace:*"
+		"@directus/storage": "workspace:*"
 	},
 	"devDependencies": {
 		"@directus/tsconfig": "workspace:*",
