--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -27,15 +27,10 @@
 	"dependencies": {
 		"@directus/constants": "workspace:*",
 		"@directus/schema": "workspace:*",
-		"@types/express": "4.17.17",
 		"@types/geojson": "7946.0.10",
-		"express": "4.18.2",
 		"geojson": "0.5.0",
 		"knex": "2.4.2",
-		"pino": "8.14.1",
-		"vue": "3.3.4",
-		"vue-router": "4.2.0",
-		"zod": "3.22.4"
+		"vue": "3.3.4"
 	},
 	"devDependencies": {
 		"@directus/tsconfig": "workspace:*",
