Clean-up deps in `@directus/types`
- Remove geojson, only types are used
- Move knex & vue to peerDependencies as these are expected to be
  installed by host package (optional because not required for all
  exported types)

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -27,13 +27,22 @@
 	"dependencies": {
 		"@directus/constants": "workspace:*",
 		"@directus/schema": "workspace:*",
-		"@types/geojson": "7946.0.10",
-		"geojson": "0.5.0",
-		"knex": "2.4.2",
-		"vue": "3.3.4"
+		"@types/geojson": "7946.0.10"
 	},
 	"devDependencies": {
 		"@directus/tsconfig": "workspace:*",
 		"typescript": "5.3.2"
+	},
+	"peerDependencies": {
+		"knex": "2.4.2",
+		"vue": "3.3.4"
+	},
+	"peerDependenciesMeta": {
+		"knex": {
+			"optional": true
+		},
+		"vue": {
+			"optional": true
+		}
 	}
 }
