--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -24,36 +24,51 @@
 		"api.d.ts"
 	],
 	"scripts": {
-		"build": "concurrently --group 'pnpm:build:*'",
+		"build": "pnpm run '/^build:.*/'",
 		"build:node": "tsup src/node.ts --tsconfig src/node/tsconfig.json --out-dir dist --format=esm --dts",
 		"build:shared": "tsup src/index.ts --tsconfig src/tsconfig.json --out-dir dist --format=esm --dts",
-		"dev": "concurrently 'pnpm:build:* --watch'",
+		"dev": "pnpm run '/^build:.*/' --watch",
 		"test": "vitest --watch=false"
 	},
 	"dependencies": {
+		"@directus/constants": "workspace:*",
+		"@directus/types": "workspace:*",
 		"@directus/utils": "workspace:*",
+		"@types/express": "4.17.17",
 		"fs-extra": "11.1.1",
 		"lodash-es": "4.17.21",
-		"tmp": "0.2.1",
 		"zod": "3.22.4"
 	},
 	"devDependencies": {
-		"@directus/constants": "workspace:*",
 		"@directus/tsconfig": "workspace:*",
-		"@directus/types": "workspace:*",
-		"@types/express": "4.17.17",
 		"@types/fs-extra": "11.0.1",
 		"@types/lodash-es": "4.17.9",
 		"@types/node": "18.16.12",
 		"@types/tmp": "0.2.3",
 		"@vitest/coverage-v8": "0.34.6",
-		"concurrently": "8.2.1",
-		"knex": "2.4.2",
-		"pino": "8.14.1",
+		"tmp": "0.2.1",
 		"tsup": "8.0.1",
 		"typescript": "5.3.2",
-		"vitest": "0.34.6",
+		"vitest": "0.34.6"
+	},
+	"peerDependencies": {
+		"knex": "2.4.2",
+		"pino": "8.14.1",
 		"vue": "3.3.4",
 		"vue-router": "4.2.0"
+	},
+	"peerDependenciesMeta": {
+		"knex": {
+			"optional": true
+		},
+		"pino": {
+			"optional": true
+		},
+		"vue": {
+			"optional": true
+		},
+		"vue-router": {
+			"optional": true
+		}
 	}
 }
