add heif to select dropdown but careful
this seems to generate AVIF images and not HEIF(?) at least according to my `file` command

--- a/api/src/database/system-data/fields/settings.yaml
+++ b/api/src/database/system-data/fields/settings.yaml
@@ -323,6 +323,8 @@ fields:
                   text: Tiff
                 - value: avif
                   text: AVIF
+                - value: heif
+                  text: HEIF
             width: half
         - field: transforms
           name: $t:field_options.directus_settings.additional_transforms
