--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -32,6 +32,7 @@
 	},
 	"dependencies": {
 		"@directus/constants": "workspace:*",
+		"@directus/themes": "workspace:*",
 		"@directus/types": "workspace:*",
 		"@directus/utils": "workspace:*",
 		"@types/express": "4.17.17",
