--- a/sdk/package.json
+++ b/sdk/package.json
@@ -44,14 +44,14 @@
 	"scripts": {
 		"build": "NODE_ENV=production tsup",
 		"dev": "NODE_ENV=development tsup",
-		"test": "vitest --watch=false"
+		"test": "vitest --watch=false --typecheck"
 	},
 	"devDependencies": {
 		"@directus/tsconfig": "workspace:*",
 		"@types/node-fetch": "2.6.4",
 		"tsup": "8.0.1",
 		"typescript": "5.3.2",
-		"vitest": "0.34.6"
+		"vitest": "1.0.1"
 	},
 	"engines": {
 		"node": ">=18.0.0"
