--- a/packages/update-check/package.json
+++ b/packages/update-check/package.json
@@ -26,11 +26,11 @@
 		"test": "vitest --watch=false"
 	},
 	"dependencies": {
+		"axios": "1.6.2",
+		"axios-cache-interceptor": "1.3.2",
 		"boxen": "7.1.1",
 		"chalk": "5.3.0",
-		"filenamify": "6.0.0",
 		"find-cache-dir": "5.0.0",
-		"got": "13.0.0",
 		"semver": "7.5.4"
 	},
 	"devDependencies": {
@@ -39,7 +39,6 @@
 		"@types/node": "18.16.12",
 		"@types/semver": "7.5.1",
 		"@vitest/coverage-v8": "0.34.6",
-		"keyv": "4.5.2",
 		"strip-ansi": "7.1.0",
 		"tsup": "8.0.1",
 		"typescript": "5.3.2",
