Update Vitest to v1

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,20 +26,19 @@
 		"dev": "vite build --watch",
 		"story:build": "histoire build",
 		"story:dev": "histoire dev",
-		"story:preview": "histoire preview",
-		"test": "vitest --watch=false"
+		"story:preview": "histoire preview"
 	},
 	"devDependencies": {
 		"@directus/tsconfig": "workspace:*",
 		"@histoire/plugin-vue": "0.16.1",
 		"@vitejs/plugin-vue": "4.2.3",
-		"@vitest/coverage-v8": "0.34.6",
+		"@vitest/coverage-v8": "1.0.4",
 		"histoire": "0.16.1",
 		"rollup-plugin-node-externals": "6.1.1",
 		"typescript": "5.3.2",
 		"vite": "4.3.7",
 		"vite-plugin-dts": "2.3.0",
-		"vitest": "0.34.6"
+		"vitest": "1.0.4"
 	},
 	"peerDependencies": {
 		"pinia": "2.1.7",
