--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgis/postgis:13-alpine
+    image: postgis/postgis:13-3.4-alpine
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: directus
@@ -75,7 +75,7 @@ services:
       - 5100:5432
 
   postgres10:
-    image: postgis/postgis:10-alpine
+    image: postgis/postgis:10-3.2-alpine
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: directus
