--- a/api/package.json
+++ b/api/package.json
@@ -145,6 +145,7 @@
 		"openid-client": "5.6.1",
 		"ora": "6.3.1",
 		"otplib": "12.0.1",
+		"p-limit": "5.0.0",
 		"p-queue": "7.4.1",
 		"papaparse": "5.4.1",
 		"pino": "8.16.2",
