add focal point MVP

--- a/api/src/database/system-data/fields/files.yaml
+++ b/api/src/database/system-data/fields/files.yaml
@@ -142,3 +142,8 @@ fields:
   - field: duration
     width: half
     readonly: true
+
+  - field: focal_point
+    readonly: true
+    special:
+      - cast-json
