Revert "Test oracledb only"
This reverts commit 5749b209c295bd54a6833fed06d070e8fd838a85.

--- a/.github/workflows/blackbox.yml
+++ b/.github/workflows/blackbox.yml
@@ -31,15 +31,15 @@ jobs:
       fail-fast: false
       matrix:
         vendor:
-          #- sqlite3
-          #- postgres
-          #- postgres10
-          #- mysql
-          #- mysql5
-          #- maria
-          #- mssql
+          - sqlite3
+          - postgres
+          - postgres10
+          - mysql
+          - mysql5
+          - maria
+          - mssql
           - oracle
-          #- cockroachdb
+          - cockroachdb
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
