Revert "Temporarily activate the blackbox tests"
This reverts commit 0d8e63277ade0ae4b97dc4926f02c3f8e1d992ee.

--- a/.github/workflows/blackbox.yml
+++ b/.github/workflows/blackbox.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
       - next
-  pull_request:
-    branches:
-      - main
     paths:
       - api/**
       - tests/blackbox/**
@@ -17,7 +14,7 @@ on:
       - .github/workflows/blackbox-main.yml
 
 concurrency:
-  group: blackbox-pr-${{ github.ref }}
+  group: blackbox-${{ github.ref }}
   cancel-in-progress: true
 
 env:
