Add the latest version of oracledb to api/package.json (#19067)
Co-authored-by: Pascal Jufer <pascal-jufer@bluewin.ch>
Co-authored-by: rijkvanzanten <rijkvanzanten@me.com>

--- a/api/package.json
+++ b/api/package.json
@@ -222,6 +222,7 @@
 		"mysql": "2.18.1",
 		"nodemailer-mailgun-transport": "2.1.5",
 		"nodemailer-sendgrid": "1.0.3",
+		"oracledb": "6.2.0",
 		"pg": "8.11.3",
 		"sqlite3": "5.1.6",
 		"tedious": "16.6.1"
