--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,7 @@
 		"@directus/tsconfig": "workspace:*",
 		"@directus/types": "workspace:*",
 		"@directus/utils": "workspace:*",
+		"@directus/sdk": "workspace:*",
 		"@directus/validation": "workspace:*",
 		"@editorjs/attaches": "1.3.0",
 		"@editorjs/checklist": "1.6.0",
