expose the SDK as composable

--- a/packages/composables/package.json
+++ b/packages/composables/package.json
@@ -34,6 +34,7 @@
 		"nanoid": "5.0.4"
 	},
 	"devDependencies": {
+		"@directus/sdk": "workspace:*",
 		"@directus/extensions": "workspace:*",
 		"@directus/tsconfig": "workspace:*",
 		"@directus/types": "workspace:*",
