--- a/app/package.json
+++ b/app/package.json
@@ -65,6 +65,7 @@
 		"@fullcalendar/timegrid": "6.1.7",
 		"@histoire/plugin-vue": "0.17.6",
 		"@joeattardi/emoji-button": "4.6.4",
+		"@json2csv/plainjs": "7.0.4",
 		"@mapbox/mapbox-gl-draw": "1.4.3",
 		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
 		"@mapbox/mapbox-gl-geocoder": "5.0.2",
@@ -83,7 +84,6 @@
 		"@types/dompurify": "3.0.5",
 		"@types/file-saver": "2.0.7",
 		"@types/geojson": "7946.0.13",
-		"@types/json2csv": "5.0.7",
 		"@types/lodash": "4.14.202",
 		"@types/mapbox__mapbox-gl-draw": "1.4.6",
 		"@types/mapbox__mapbox-gl-geocoder": "4.7.7",
@@ -115,7 +115,6 @@
 		"histoire": "0.17.6",
 		"html-entities": "2.4.0",
 		"json-to-graphql-query": "2.2.5",
-		"json2csv": "5.0.7",
 		"jsonlint-mod": "1.7.6",
 		"lodash": "4.17.21",
 		"mapbox-gl": "1.13.3",
