--- a/api/package.json
+++ b/api/package.json
@@ -146,6 +146,7 @@
 		"openid-client": "5.6.1",
 		"ora": "7.0.1",
 		"otplib": "12.0.1",
+		"p-limit": "5.0.0",
 		"p-queue": "8.0.1",
 		"papaparse": "5.4.1",
 		"pino": "8.17.1",
