replace json field with two int fields

--- a/api/src/database/system-data/fields/files.yaml
+++ b/api/src/database/system-data/fields/files.yaml
@@ -143,7 +143,10 @@ fields:
     width: half
     readonly: true
 
-  - field: focal_point
-    readonly: true
-    special:
-      - cast-json
+  - field: focal_point_x
+    width: half
+    hidden: true
+
+  - field: focal_point_y
+    width: half
+    hidden: true
