--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -25,11 +25,19 @@
 		"dev": "tsup src/index.ts --format=esm --dts --watch",
 		"test": "vitest --watch=false"
 	},
-	"dependencies": {},
 	"devDependencies": {
+		"@directus/tsconfig": "workspace:*",
+		"@types/lodash-es": "4.17.12",
+		"@types/node": "18.19.3",
 		"@vitest/coverage-v8": "1.1.0",
 		"tsup": "8.0.1",
 		"typescript": "5.3.3",
 		"vitest": "1.1.0"
+	},
+	"dependencies": {
+		"@directus/constants": "workspace:*",
+		"@directus/utils": "workspace:*",
+		"dotenv": "16.3.1",
+		"lodash-es": "4.17.21"
 	}
 }
