Various small codebase clean-ups
- Update ignore files after switch to Histoire
- Remove outdated test setups/configs
- Relocate test & Histoire utils to `__` folders
- Remove borked app test (better focus on individual components tests first)
- Fix warnings in app tests, to have clean output in case of success
- Ignore test utils in api production build, remove unnecessary
  tsconfig.prod.json in `@directus/types`
- Remove Storybook ref in docs

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -21,7 +21,7 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "tsc --project tsconfig.prod.json",
+		"build": "tsc",
 		"dev": "tsc --watch"
 	},
 	"dependencies": {
