--- a/packages/extensions-sdk/tsconfig.json
+++ b/packages/extensions-sdk/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"outDir": "dist"
 	},
-	"include": ["src"],
+	"include": ["src", "create-build.test.ts"],
 	"typedocOptions": {
 		"entryPoints": ["./src/index.ts"]
 	}
