--- a/api/package.json
+++ b/api/package.json
@@ -123,6 +123,7 @@
 		"icc": "3.0.0",
 		"inquirer": "9.2.12",
 		"ioredis": "5.3.2",
+		"ip-matching": "2.1.2",
 		"isolated-vm": "4.6.0",
 		"joi": "17.11.0",
 		"js-yaml": "4.1.0",
